# itp

./: .gitignore  LICENSE  README.md  ass3.java  ass4.java  input.txt  snake.py
Assignment2/: CMakeLists.txt  main.c
Assignment_5/: input.txt
Assignment_5/src/: Main.java
Assignments_itp/: input.txt  output.txt  sort  sort.c  test  test.c
CookBook/: CMakeLists.txt  Inno Recipe  Inno Recipe.txt  main.c
MIT_6.087/: pset1.c
MIT_6.S096/: lecture1  lecture1.c
ass3/src/: Main.java
ass4/: input.txt  output.txt
ass4/src/: Assignment4.java  Main.java
assignment_3/src/: Calculator.java  CalculatorType.java  DoubleCalculator.java  IntegerCalculator.java  Main.java  OperationType.java  StringCalculator.java
cSelf/: Function.c  Function.h  grandparent.h  macroFunction.c  main  main.c  makefile  parent.h  pointer.c  random.c  types.c
cmake_testapp/: CMakeLists.txt  calc.cpp  main.cpp
demo/: pom.xml
final_pre/: prep.c  prep.java
l10/ex1/: AbstractClassDemonstration.java  Alien.java  Creature.java  Dog.java  Human.java
lab/: lab1.c  lab3  lab3.c  test.c  test.h
lab10/src/: Alien.java  Creature.java  Demonstrate.java  Dog.java  Human.java
lab14/src/: Main.java  lab14_pre.java
lab15/src/: Main.java
lab3/: CMakeLists.txt  Lab3.c  Lab3.h  main.c
lab4/: CMakeLists.txt  main.c
lab5/: main.c  overflow.c
lab6/src/: Main.java
lab9/src/: Main.java
lect4/: CMakeLists.txt  main.c
moodle/: CMakeLists.txt  main.c
random/: CMakeLists.txt  library.c  library.h
vsCodeLib/: CMakeLists.txt  main.c
vsCodeLib/lib/: stringL.c  stringL.h
(+15 files in other folders)
